--- a/src/Component/Header/Header.css
+++ b/src/Component/Header/Header.css
@@ -3,6 +3,9 @@
   background-color: #000;
   min-height: 600px;
 overflow: hidden;
+width: auto;
+  
+
 }
 
 .header-content {
