--- a/src/Component/NavBar/NavBar.css
+++ b/src/Component/NavBar/NavBar.css
@@ -6,6 +6,7 @@
   flex-direction: row;
   display: flex;
    text-align: start;
+   width: auto;
 }
 .navbar a {
   color: white;
